# ipyrun

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  call_pipreqs.sh  conda-build.sh  environment-dev.yml  mf_base.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirementss.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
INTERNAL_TOOLS/: launchOverheating.lnk
INTERNAL_TOOLS/apps/: launchOverheating.lnk
INTERNAL_TOOLS/datadriven/: JupyterLab-launch-mf_base.lnk
INTERNAL_TOOLS/notebooks/: 20_RW_OverheatingToolbox.ipynb  launchOverheating.bat
INTERNAL_TOOLS/reports/: overheating_report.docx
INTERNAL_TOOLS/spec/: Ss_75_00_00_00-Communications,Security,Safety,ControlandProtection.md  Ss_75_10_21_00-DataDistributionandTelecommunications.md  Ss_75_40_02_00-AccessControl.md
binder/: environment.yml  postBuild
conda.recipe/: conda_build_config.yaml  meta.yaml
docs/: CHANGELOG.md  Makefile  README.txt  _config.yml  _toc.yml  api.rst  conda-bld.md  conf.py  crop_logo.py  environment.yml  index.md  index.rst  installation.rst  intro.ipynb  make.bat  under-the-hood.ipynb  usage.rst
docs/images/: icon.3dm
examples/: under-the-hood.ipynb
ipyrun/: Untitled.ipynb  __init__.py  _filecontroller.ipynb  _filecontroller.py  _ipyblocks.ipynb  _ipydisplayfile.ipynb  _ipydisplayfile.py  _ipyeditcsv.ipynb  _ipyeditcsv.py  _ipyeditjson.ipynb  _ipyeditjson.py  _runconfig.ipynb  _runconfig.py  constants.py  default_config.yaml  graph-operations.py  graph_operations.py  ipyrun.ipynb  ipyrun.py  ipyrun_archived.ipynb  ipyrun_archived.py  ipyrun_overheating.ipynb  ipyrun_overheating.py  jupytext_pytoipynb_noexecute.bat  mydocstring_display.py  overheating-app.ipynb  overheating-app.py  run.py  run_future.py  utils.py  z_del_notebooks.bat  z_jupytext_pytoipynb_execute.bat  z_jupytext_pytoipynb_noexecute.bat
issues/: issues-vega_rendering.ipynb
src/: __init__.py  report_model_run_file.py  setup_model_run_file.py
test_data/: flare.json
test_filetypes/: eg_csv.csv  eg_json.json  eg_md.md  eg_py.py  eg_short_csv.csv  eg_txt.txt  eg_vega_tree-layout.vg.json
test_scripts/: expansion_vessel_sizing.py  line_graph.py
tests/: __init__.py  constants.py  test_ipyrun.py  test_runshell.py
(+465 files in other folders)
