[build-system]
requires = ["hatchling>=1.10.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ipyrun"
dynamic = ["version"]
description = "wrapper that sits on top of ipywidgets and other ipy widget libraries to template / automate the creation of widget forms. Uses pydantic to create defined data-container and serialisation to JSON. Includes example patterns for adding new custom widgets."
readme = "README.md"
authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
keywords = ["ipyrun"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = ["ipyautoui", "Jinja2"]

[project.urls]
Homepage = "https://github.com/maxfordham/ipyrun"

[tool.hatch.version]
source = "vcs"
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/ipyrun"]

# [tool.hatch.envs.ipyrun-dev]
# type = "conda"
# command = "mamba"
# ^ don't understand how this works...

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
