[build-system]
requires = ["hatchling>=1.10.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ipyrun"
dynamic = ["version"]
description = "template UI (ipywidgets / ipyautoui) for running python scripts in jupyterlab / voila."
readme = "README.md"
authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
keywords = ["ipyrun"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "ipyautoui>=0.7",
    "pydantic>2",
    "Jinja2",
    "halo",
    "emoji",
    "PyYAML",
    "stringcase",
    "immutables",
]

[project.urls]
Homepage = "https://github.com/maxfordham/ipyrun"

[tool.hatch.version]
source = "vcs"
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/ipyrun"]

# [tool.hatch.envs.ipyrun-dev]
# type = "conda"
# command = "mamba"
# ^ don't understand how this works...

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
